@@ -1,6 +1,7 @@
 Документация
 ------------
 
+* Добавить про rate_limit
 * Добавить про flv publish??
 * Рассказать про структуру rtmp урлов
 * Рассказать про захват видео
